--- a/asserts/styles/styles.css
+++ b/asserts/styles/styles.css
@@ -7,7 +7,7 @@ body {
 /* Defining card properties */
 .card {
   min-width: 30%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: darkgray;
   transition: 0.3s;
   border-radius: 5px;
   margin: auto;
@@ -20,7 +20,7 @@ header {
 }
 
 header h1 {
-  background-color: rgb(231, 231, 231);
+  background-color:#fff;
   color: green;
   font-size: xx-large;
   padding: 1%;
@@ -56,7 +56,7 @@ p {
 
 #currentAge {
   min-width: 30%;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 gray;
   transition: 0.3s;
   border-radius: 5px;
   margin: auto;
