--- a/asserts/styles/styles.css
+++ b/asserts/styles/styles.css
@@ -44,7 +44,7 @@ input {
   text-align: center;
 }
 
-#input-Dob {
+#input_Dob {
   margin: 2%;
 }
 
@@ -53,7 +53,7 @@ p {
   margin: 5%;
 }
 
-#current-Age {
+#current_Age {
   min-width: 30%;
   box-shadow: 0 4px 8px 0 gray;
   transition: 0.3s;
